--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "emotion-theming": "^10.0.27",
     "next": "9.5.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "date-fns": "^2.14.0",
+    "gray-matter": "^4.0.2",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2"
   }
 }
