--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.14.0",
     "emotion-theming": "^10.0.27",
     "gray-matter": "^4.0.2",
+    "lottie-react-web": "^2.2.2",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
