--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.5",
     "@chakra-ui/icons": "^1.0.0-rc.5",
-    "date-fns": "^2.14.0",
-    "gray-matter": "^4.0.2",
     "lottie-react-web": "^2.2.2",
     "next": "9.5.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "remark": "^12.0.0",
-    "remark-html": "^11.0.2"
+    "react-dom": "16.13.1"
   }
 }
