--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site-perso",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-rc.5",
-    "@chakra-ui/icons": "^1.0.0-rc.5",
+    "@chakra-ui/core": "1.0.0-rc.5",
+    "@chakra-ui/icons": "1.0.0-rc.5",
+    "@chakra-ui/system": "^1.0.0-next.3",
+    "@chakra-ui/theme-tools": "1.0.0-rc.5",
+    "@types/node": "^14.11.8",
     "lottie-react-web": "^2.2.2",
     "next": "9.5.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "typescript": "^4.0.3"
   }
 }
