--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@chakra-ui/icons": "1.0.0-rc.5",
     "@chakra-ui/system": "^1.0.0-next.3",
     "@chakra-ui/theme-tools": "1.0.0-rc.5",
-    "@types/node": "^14.11.8",
     "lottie-react-web": "^2.2.2",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "@types/node-fetch": "^2.5.7"
   }
 }
